--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -191,6 +191,7 @@
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
     d="M50,80c-9.186,0-17.391-4.141-22.893-10.643L37.5,58.965h-35v35l12.204-12.204C23.395,91.42,35.982,97.5,50,97.5c26.232,0,47.5-21.268,47.5-47.5H80C80,66.568,66.568,80,50,80z"
   />
   <path
@@ -199,6 +200,7 @@
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
     d="M85.296,18.24C76.605,8.58,64.018,2.5,50,2.5C23.768,2.5,2.5,23.768,2.5,50H20c0-16.568,13.432-30,30-30c9.186,0,17.393,4.141,22.893,10.643L62.5,41.036h35v-35L85.296,18.24z"
   />
   <!-- end refresh -->
@@ -224,6 +226,7 @@
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
     d="M96.465,87.627L70.56,61.721C74.924,55.591,77.5,48.099,77.5,40C77.5,19.29,60.711,2.5,40,2.5C19.29,2.5,2.5,19.29,2.5,40c0,20.711,16.79,37.5,37.5,37.5c8.098,0,15.591-2.575,21.72-6.94l25.906,25.905L96.465,87.627z M40,65c-13.807,0-25-11.192-25-25c0-13.807,11.193-25,25-25c13.808,0,25,11.193,25,25C65,53.808,53.808,65,40,65z"
   />
   <path
@@ -232,10 +235,47 @@
     attr.fill-opacity="{{fillOpacity}}"
     attr.stroke="url(#stroke-gradient-{{id}})"
     attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
     d="M95,22.5c0-4.143-3.357-7.5-7.5-7.5
 	S80,18.357,80,22.5c0,2.145,0.904,4.073,2.347,5.44L67.673,66.273l-13.37-50.136C56.234,14.781,57.5,12.54,57.5,10
 	c0-4.143-3.357-7.5-7.5-7.5s-7.5,3.357-7.5,7.5c0,2.54,1.266,4.78,3.197,6.137l-13.37,50.136L17.654,27.939
 	C19.096,26.573,20,24.644,20,22.5c0-4.143-3.357-7.5-7.5-7.5S5,18.357,5,22.5c0,3.673,2.642,6.724,6.128,7.369L14.857,72.5H12.5v15
 	H10v10h80v-10h-2.5v-15h-2.356l3.729-42.631C92.358,29.223,95,26.173,95,22.5z"
+  />
+  <path
+    *ngIf="type === 'ogre'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    d="M82.5,5.721c0,0,5,5,5,15s-10,10-10,10h-3.519
+	C72.018,28.728,69.393,27.5,66.5,27.5h-33c-2.894,0-5.518,1.228-7.481,3.221H22.5c0,0-10,0-10-10s5-15,5-15s-15,5-15,20
+	c0,13.263,7.821,22.61,20,24.6V60.5c0,6.583,4.861,11.923,10.881,11.993C33.869,79.732,35,87.834,35,90c0,4.143,3.357,7.5,7.5,7.5
+	h15c4.143,0,7.5-3.357,7.5-7.5c0-2.166,1.131-10.268,1.62-17.507c6.019-0.07,10.88-5.41,10.88-11.993V50.32
+	c12.179-1.989,20-11.337,20-24.6C97.5,10.721,82.5,5.721,82.5,5.721z M37.5,65c-4.143,0-7.5-3.357-7.5-7.5s3.357-7.5,7.5-7.5
+	s7.5,3.357,7.5,7.5S41.643,65,37.5,65z M62.5,65c-4.143,0-7.5-3.357-7.5-7.5s3.357-7.5,7.5-7.5s7.5,3.357,7.5,7.5S66.643,65,62.5,65
+	z"
+  />
+  <path
+    *ngIf="type === 'folder'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    d="M42.503,10.5c-9.836,0-28.103,0-28.103,0
+	c-6.296,0-11.9,5.373-11.9,12v56c0,6.627,5.604,12,11.9,12h72.2c6.296,0,10.9-5.373,10.9-12c0,0,0-37.406,0-44
+	s-4.467-11.989-10.9-12s-33.807,0-33.807,0S52.339,10.5,42.503,10.5z"
+  />
+  <polygon
+    *ngIf="type === 'chevron'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    points="96.965,50.5 50.5,4.035 4.035,50.5
+	19.125,65.5 50.5,34.035 81.875,65.5 "
   />
 </svg>
