--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -278,4 +278,16 @@
     points="96.965,50.5 50.5,4.035 4.035,50.5
 	19.125,65.5 50.5,34.035 81.875,65.5 "
   />
+  <path
+    *ngIf="type === 'ankh'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    d="M85,60l-5-15H60.938
+	C65.605,36.781,70,27.677,70,22.5c0-11.046-8.955-20-20-20c-11.046,0-20,8.954-20,20c0,5.177,4.394,14.281,9.062,22.5H19.999L15,60
+	l28.965-4.138L40,97.5h20l-3.967-41.638L85,60z M49.999,12.551c5.524,0,10.001,4.478,10.001,10c0,5.523-10.001,20-10.001,20
+	s-10-14.477-10-20C40,17.028,44.477,12.551,49.999,12.551z"
+  />
 </svg>
