--- a/projects/docs/src/app/app.component.scss
+++ b/projects/docs/src/app/app.component.scss
@@ -3,6 +3,20 @@
   justify-content: center;
 }
 
+.flex-1 {
+  flex: 1;
+}
+
+.icon-frame {
+  background-color: white;
+  margin-top: 0.5em;
+  border-color: black;
+  border-radius: 0.5em;
+  border-style: solid;
+  border-width: 1px;
+  padding: 1em;
+}
+
 .icon-container {
   position: relative;
   width: 10em;
@@ -19,7 +33,6 @@
     display: grid;
     grid-auto-rows: minmax(0, 1fr);
     grid-auto-columns: minmax(0, 1fr);
-    z-index: -1;
 
     > .accent {
       background-color: lightgrey;
@@ -30,4 +43,42 @@
 .fill-container {
   display: flex;
   align-items: flex-end;
+}
+
+code {
+  display: inline-block;
+  background-color: #f8f8f8;
+  color: black;
+  border: 1px solid #cccccc;
+  padding: 0.5em;
+  border-radius: 0.5em;
+  margin-top: 0.5em;
+}
+
+.heading {
+  display: flex;
+  position: sticky;
+  top: 0;
+}
+
+#background {
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  z-index: -1;
+
+  background: linear-gradient(-45deg, #102000, #000000) 0 0 / 150% 150%;
+  animation: 10s ease 0s infinite gradient;
+}
+
+@keyframes gradient {
+  0%,
+  100% {
+    background-position: 0% 0%;
+  }
+  50% {
+    background-position: 50% 50%;
+  }
 }
