--- a/projects/icon/src/lib/icon.component.html
+++ b/projects/icon/src/lib/icon.component.html
@@ -290,4 +290,28 @@
 	l28.965-4.138L40,97.5h20l-3.967-41.638L85,60z M49.999,12.551c5.524,0,10.001,4.478,10.001,10c0,5.523-10.001,20-10.001,20
 	s-10-14.477-10-20C40,17.028,44.477,12.551,49.999,12.551z"
   />
+  <polygon
+    *ngIf="type === 'sun'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    points="50.001,5.864 57.541,21.864
+	72.068,11.778 70.6,29.403 88.224,27.933 78.14,42.461 94.137,50 78.14,57.541 88.224,72.07 70.6,70.6 72.068,88.225 57.541,78.141
+	50.001,94.137 42.461,78.141 27.933,88.225 29.403,70.6 11.777,72.07 21.863,57.541 5.864,50 21.863,42.461 11.777,27.933
+	29.403,29.403 27.933,11.778 42.461,21.864 "
+  />
+  <path
+    *ngIf="type === 'moon'"
+    attr.fill="url(#fill-gradient-{{id}})"
+    attr.fill-opacity="{{fillOpacity}}"
+    attr.stroke="url(#stroke-gradient-{{id}})"
+    attr.stroke-width="{{strokeWidth}}"
+    stroke-miterlimit="10"
+    d="M90.029,62.626
+	c-14.54,14.54-38.115,14.539-52.654,0c-14.54-14.54-14.54-38.114,0-52.654c2.739-2.74,5.802-4.963,9.061-6.67
+	C35.463,4.049,24.701,8.604,16.313,16.991c-18.417,18.418-18.417,48.278,0,66.696c18.417,18.416,48.278,18.416,66.694,0
+	c8.389-8.389,12.942-19.149,13.69-30.123C94.989,56.825,92.768,59.886,90.029,62.626z"
+  />
 </svg>
