--- a/projects/docs/src/styles.scss
+++ b/projects/docs/src/styles.scss
@@ -3,7 +3,7 @@ body {
   font-family: Arial;
   margin: auto;
   padding: 0 0.25em;
-  max-width: 720px;
+  max-width: 820px;
   color: whitesmoke;
 }
 
@@ -16,13 +16,14 @@ ol li {
 
 h2 {
   margin: 0;
-  padding: 0.25em 0;
-  z-index: 2;
+  padding: 1em 0 0.25em 0;
+  font-size: 2em;
 }
 
 h3 {
-  padding: 0;
   margin: 0;
+  padding: 1em 0 0.25em 0;
+  font-size: 1.5em;
 }
 
 .col-1 {
@@ -34,7 +35,7 @@ h3 {
 .col-1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 1em;
+  grid-gap: 1.25em;
 
   @media (max-width: 720px) {
     grid-template-columns: 1fr;
@@ -49,9 +50,31 @@ h3 {
 .d-flex {
   display: flex;
 }
+.flex-1 {
+  flex: 1;
+}
+.flex-wrap {
+  flex-wrap: wrap;
+}
 .f-justify-center {
   justify-content: center;
 }
 .f-justify-right {
   justify-content: flex-end;
+}
+
+.pt-1 {
+  padding-top: 0.25em;
+}
+.pr-1 {
+  padding-right: 0.25em;
+}
+.pl-1 {
+  padding-left: 0.25em;
+}
+.pt-2 {
+  padding-top: 0.5em;
+}
+.pb-2 {
+  padding-bottom: 0.5em;
 }
