--- a/projects/docs/src/styles.scss
+++ b/projects/docs/src/styles.scss
@@ -3,13 +3,18 @@ body {
   font-family: Arial;
   margin: auto;
   padding: 0 0.25em;
-  max-width: 820px;
+  max-width: 720px;
   color: whitesmoke;
 }
 
-ul,
+a {
+  color: whitesmoke;
+  &:active {
+    color: grey;
+  }
+}
+
 ul li,
-ol,
 ol li {
   margin-top: 0.5em;
 }
@@ -32,14 +37,17 @@ h3 {
   grid-gap: 1em;
 }
 
+p + ul,
 .col-1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-gap: 1.25em;
 
   @media (max-width: 720px) {
     grid-template-columns: 1fr;
   }
+}
+.col-1-1 {
+  grid-gap: 1.25em;
 }
 
 .pos-sticky {
