--- a/projects/docs/src/app/app.component.html
+++ b/projects/docs/src/app/app.component.html
@@ -1,6 +1,6 @@
 <markdown src="assets/README.md"></markdown>
 
-<h2>icon stack example</h2>
+<h2>icon stack demo</h2>
 <div class="d-flex pb-2">
   <div class="flex-1">
     <h3>html code</h3>
@@ -82,7 +82,7 @@
   [hidden]="!filteredTypes.includes(item.type)"
 >
   <h2 [id]="item.type">
-    {{item.type}} example
+    {{item.type}} demo
   </h2>
   <div class="d-flex">
     <form class="flex-1">
