--- a/projects/docs/src/styles.scss
+++ b/projects/docs/src/styles.scss
@@ -14,21 +14,23 @@ a {
   }
 }
 
-ul li,
-ol li {
-  margin-top: 0.5em;
+h2,
+h3,
+h4 {
+  margin: 0;
+  padding: 1em 0 0.25em 0;
 }
 
 h2 {
-  margin: 0;
-  padding: 1em 0 0.25em 0;
   font-size: 2em;
 }
 
 h3 {
-  margin: 0;
-  padding: 1em 0 0.25em 0;
   font-size: 1.5em;
+}
+
+h4 {
+  font-size: 1.25em;
 }
 
 .col-1 {
@@ -37,7 +39,6 @@ h3 {
   grid-gap: 1em;
 }
 
-p + ul,
 .col-1-1 {
   display: grid;
   grid-template-columns: 1fr 1fr;
